2007-08-26  Satoshi Nakagawa <artension@gmail.com>

	Replaced NSData#bytes.bytestr for NSData#rubyString.

2007-08-24  Satoshi Nakagawa <artension@gmail.com>

	Added menus, mark and clear scrollback.
	Changed max lines of log view to 3000.

2007-08-19  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crashes when pushed Command + -.

2007-08-18  Satoshi Nakagawa <artension@gmail.com>

	Added application icon.

2007-08-16  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, channel password should be kept after kicked out for rejoining.

2007-08-15  Satoshi Nakagawa <artension@gmail.com>

	Released 0.9.

2007-08-15  Satoshi Nakagawa <artension@gmail.com>

	Commented needless objc_method and objc_class_method.

2007-08-14  Satoshi Nakagawa <artension@gmail.com>

	Added auto masking for registering auto op.

2007-08-14  Satoshi Nakagawa <artension@gmail.com>

	Changed to delay sending who commands.

2007-08-14  Satoshi Nakagawa <artension@gmail.com>

	Added auto op.

2007-08-12  Satoshi Nakagawa <artension@gmail.com>

	Added support for jobs, travel, mobi, cat, tel, asia gTLDs.
	Changed to support urls missing the first 'h'.

2007-08-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, multi line paste from context menu of text field should open multi line paste sheet.

2007-08-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, text value on dialogs should be stored as a single line string.

2007-08-07  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, windowShouldClose needs objc_method in RubyCocoa 0.11.1p1 for PPC.

2007-08-06  Satoshi Nakagawa <artension@gmail.com>

	Implementing AutoOpDialog.
	Changed password text field on the server dialog to NSSecureTextField.

2007-08-03  Satoshi Nakagawa <artension@gmail.com>

	Added file transfer notifications on Growl.
	Added sound events of file transfer.

2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Changed to use Time.now.usec for gettimeofday.
