@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{684, 73}, {941, 1101}}</string>
+	<string>{{616, 68}, {941, 1101}}</string>
 </dict>
 </plist>
